<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_home"
            android:textAlignment="center"
            android:textColor="#080823"
            android:textSize="30sp" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/lblNomeJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nome"
            android:textColor="#245A7C"
            android:layout_marginStart="10sp"
            android:textSize="24sp" />

        <EditText
            android:layout_marginStart="10sp"
            android:id="@+id/edNomeJogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/ed_nome"
            android:layout_marginEnd= "60dp"
            android:inputType="textPersonName"
            android:labelFor="@id/lblNomeJogo"
            android:textColor="#3381B1"
            android:textSize="20sp" />

        <TextView
            android:layout_marginStart="10sp"
            android:id="@+id/lblGeneroJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_genero"
            android:textColor="#245A7C"
            android:textSize="24sp" />

        <EditText
            android:layout_marginStart="10sp"
            android:id="@+id/edGeneroJogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:layout_marginEnd= "60dp"
            android:hint="@string/ed_genero"
            android:inputType="textPersonName"
            android:labelFor="@id/lblAnoJogo"
            android:textColor="#3381B1"
            android:textSize="20sp" />

        <TextView
            android:layout_marginStart="10sp"
            android:id="@+id/lblAnoJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ano"
            android:textColor="#245A7C"
            android:textSize="24sp" />

        <EditText
            android:layout_marginStart="10sp"
            android:id="@+id/edAnoJogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:layout_marginEnd= "60dp"
            android:hint="@string/ed_ano"
            android:inputType="textPersonName"
            android:labelFor="@id/lblAnoJogo"
            android:textColor="#3381B1"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text="@string/btn_salvar"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text="@string/btn_listar"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
